[project]
name = "mcp-broker"
version = "0.1.0"
description = "MCP server as Agent — dynamic domain agent instantiation via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_broker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
